refactor component, to allow progressive enhancement/ disclosure

--- a/styles/modules/tab-list-item.scss
+++ b/styles/modules/tab-list-item.scss
@@ -3,6 +3,7 @@
 
   &__title {
     color: currentColor;
+    font-family: 'Roboto', serif;
     display: block;
     padding-bottom: .5rem;
     padding-top: .5rem;
