limit api results to 5 items

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,3 +7,4 @@
 @import "modules/article.scss";
 @import "modules/tab.scss";
 @import "modules/tab-list-item.scss";
+@import "modules/visually-hidden.scss";
