--- a/styles/modules/article.scss
+++ b/styles/modules/article.scss
@@ -4,6 +4,10 @@
     font-size: 2.4rem;
   }
 
+  &__teaser {
+    font-size: 1.5rem;
+  }
+
   &__content {
     font-family: 'Roboto', serif;
     font-size: 1.2rem;
@@ -12,7 +16,7 @@
     > [data-module="tab"] {
       @include small {
         float: left;
-        margin: 0 1.5rem 1.5rem -10rem;
+        margin: 0 1.5rem 1.5rem -7rem;
       }
     }
   }
