--- a/styles/modules/tab-list-item.scss
+++ b/styles/modules/tab-list-item.scss
@@ -1,18 +1,26 @@
 .tab-list-item {
   font-size: .95rem;
+  list-style: none;
 
   &__title {
     color: currentColor;
     font-family: 'Roboto', serif;
+    font-size: 1.15rem;
     display: block;
-    padding-bottom: .5rem;
-    padding-top: .5rem;
+    padding-bottom: .8rem;
+    padding-top: .8rem;
     text-decoration: none;
 
     &:hover,
     &:focus {
       text-decoration: underline;
     }
+  }
+
+  &__date {
+    display: block;
+    font-size: .7rem;
+    margin-bottom: .1rem;
   }
 
   & + & {
