--- a/styles/modules/tab.scss
+++ b/styles/modules/tab.scss
@@ -30,7 +30,7 @@
         line-height: 1.2;
         margin-bottom: 0;
         margin-top: 0;
-        padding: .8rem 1.3rem .5rem 1.3rem;
+        padding: 1rem 1.3rem .5rem 1.3rem;
 
         &:hover,
         &:focus {
@@ -45,7 +45,7 @@
           border-top: .3rem solid $guardian-blue-dark;
           box-shadow: 0 4px 0 0 $guardian-blue;
           color: white;
-          padding-top: .5rem;
+          padding-top: .7rem;
         }
       }
     }
@@ -58,7 +58,7 @@
     > ol {
       margin-bottom: 0;
       margin-top: 0;
-      padding-left: 1rem;
+      padding-left: 0;
     }
 
     &-title {
