--- a/styles/modules/tab.scss
+++ b/styles/modules/tab.scss
@@ -25,10 +25,12 @@
         color: #333;
         font-family: 'Roboto', sans-serif;
         font-size: 1.1rem;
+        font-weight: 700;
         line-height: 1.2;
         margin-bottom: 0;
         margin-top: 0;
         padding: .8rem 1.3rem .5rem 1.3rem;
+        text-align: center;
         user-select: none;
 
         &:hover,
@@ -63,7 +65,6 @@
 
   &__panel {
     border-top: 2px solid white;
-    padding: .8rem 1.3rem;
 
     > ol {
       margin-bottom: 0;
